@@ -13,7 +13,7 @@
 <a href="#instruct">Powerful client-based instructions</a><br>
 <a href="#libdjbdns">Secure DNS client library</a><br>
 <a href="#runit">Reliable service management and logging</a><br>
-<a href="#ssl">Small footprint SSL support</a> (on Linux)<br>
+<a href="#ssl">Small footprint SSL support</a> (on Linux and MacOSX)<br>
 <a href="#smallcode">Small code size</a>
 <hr>
 <a name="separation"><h3>One daemon for each service</h3></a>
@@ -69,7 +69,7 @@ service supervision</a> and a
 reliable logging facility</a>.
 <hr>
 <a name="ssl"><h3>Small footprint SSL support</h3></a>
-On Linux the <i>ipsvd</i> package optionally provides the
+On Linux and MacOSX the <i>ipsvd</i> package optionally provides the
 <a href="sslio.8.html">sslio</a> program to encrypt a network connection
 using the SSLv3 implementation of the
 <a href="http://www.matrixssl.org">matrixssl</a> library.
