@@ -16,24 +16,24 @@ If you don't have a <tt>/package</tt> directory, create it now:
  # mkdir -p /package
  # chmod 1755 /package
 </pre>
-Download <a href="ipsvd-0.10.1.tar.gz">ipsvd-0.10.1.tar.gz</a> into
+Download <a href="ipsvd-0.11.0.tar.gz">ipsvd-0.11.0.tar.gz</a> into
 <tt>/package</tt> and unpack the archive
 <pre>
  # cd /package
- # gunzip ipsvd-0.10.1.tar
- # tar -xpf ipsvd-0.10.1.tar
- # rm ipsvd-0.10.1.tar
- # cd net/ipsvd-0.10.1
+ # gunzip ipsvd-0.11.0.tar
+ # tar -xpf ipsvd-0.11.0.tar
+ # rm ipsvd-0.11.0.tar
+ # cd net/ipsvd-0.11.0
 </pre>
-If you are installing on Linux, and want to make the
+If you are installing on Linux or MacOSX, and want to make the
 <a href="sslio.8.html">sslio</a> program available, download the
-<a href="http://www.matrixssl.org">matrixssl</a> library version 1.2 (newer
+<a href="http://www.matrixssl.org">matrixssl</a> library version 1.2.2 (newer
 versions probably work too) and copy the archive to the
 <tt>src/matrixssl.tar.gz</tt> (alternatively download from the
 <a href="http://ftp.debian.org/debian/pool/main/m/matrixssl/">
 Debian archive</a>)
 <pre>
- # cp matrixssl-1-2.tar.gz src/matrixssl.tar.gz
+ # cp matrixssl-1-2-2.tar.gz src/matrixssl.tar.gz
 </pre>
 Now compile and install the <i>ipsvd</i> programs
 <pre>
@@ -46,7 +46,7 @@ hierarchy, do
 </pre>
 To report success:
 <pre>
- # mail pape-ipsvd-0.10.1@smarden.org &lt;compile/sysdeps
+ # mail pape-ipsvd-0.11.0@smarden.org &lt;compile/sysdeps
 </pre>
 If you use <i>ipsvd</i> regularly, please
 <a href="http://smarden.org/pape/#contribution">contribute</a> to the project.
