@@ -22,7 +22,7 @@ conditionally runs a program, with standard input reading from the socket,
 and standard output writing to the socket, to handle this connection. <b>tcpsvd</b>
 keeps listening on the socket for new connections, and can handle multiple
 connections simultaneously. <p>
-<b>tcpsvd</b> optionally checks for special intructions
+<b>tcpsvd</b> optionally checks for special instructions
 depending on the IP address or hostname of the client that initiated the
 connection, see <i><b>ipsvd-instruct</b>(5)</i>. 
 <h2><a name='sect3'>Options</a></h2>
