@@ -9,6 +9,10 @@
 <hr>
 <h1>ipsvd - upgrading from previous versions</h1>
 <hr>
+<h3>0.10.1 to 0.11.0</h3>
+The <a href="sslio.8.html">sslio</a> program also runs on MacOSX, see the
+<a href="install.html">installation insructions</a> on how to enable it in
+the build and testing process.
 <h3>0.9.x to 0.10.1</h3>
 Client support has been added to the <a href="sslio.8.html">sslio</a>
 program to have it run under <tt>tcpclient</tt>.
