@@ -23,3 +23,4 @@
 0.9.7
 0.10.0
 0.10.1
+0.11.0
