@@ -1,0 +1,36 @@
+#!/bin/sh
+rm -rf "${ctmp}"
+
+sslio
+echo $?
+sslio -V
+echo $?
+
+mkdir "${ctmp}"
+mkfifo "${ctmp}"/p0
+mkfifo "${ctmp}"/p1
+sh -c 'exec <"${ctmp}"/p0
+       exec >"${ctmp}"/p1
+       sslio -Csslio.pem sh -c "sleep 1; echo foo"' &
+pid=$!
+sh -c 'exec 7>"${ctmp}"/p0
+       exec 6<"${ctmp}"/p1
+       sslio -c sh -c "sleep 2; exec cat <&6"'
+echo $?
+sleep 1
+wait $pid
+echo $?
+sh -c 'exec <"${ctmp}"/p0
+       exec >"${ctmp}"/p1
+       sslio -Csslio.pem sh -c "sleep 2; exec cat >&2"' &
+pid=$!
+sh -c 'exec 7>"${ctmp}"/p0
+       exec 6<"${ctmp}"/p1
+       sslio -c sh -c "sleep 1; echo bar >&7"'
+rc=$?
+sleep 3
+echo $rc
+wait $pid
+echo $?
+
+rm -rf "${ctmp}"
