@@ -1,0 +1,34 @@
+-----BEGIN RSA PRIVATE KEY-----
+MIICWwIBAAKBgQC6P0QMz62aotXTCKPzYekAPRxCWhSwFXRg99z2ZbkxdsGS7nwg
+N63+pYaYo6y3Nk+xEulpCky246gQuf7SWp8iW2ksSMi4D+7i+Db9QxEFZBUpbC7s
+J24jIUj8RDiRyM+G08YoRGQzlfGYpapZ8EQ6+cYyxQORKpqF1nRVNQj44QIDAQAB
+AoGAOpfwxr8HdODJuGy9d7JT5VlUbKN+Yq89P8x63aG/E4qy95DDyDb8LGLS526G
+xdT2WVUDzaIJ5HfWxfxd6LvN2C1JE78QeEx4mII4HzfAVSyMU2tdX8BHU5hbqr5f
+vHym3dsO20PwuZvupO/Ml/b20Pl+8olA1+1CMV6aJGc7GMkCQQDvEcZGSjpWbrSd
+vGCmle9jybHQxTRDeEeaP52tFg7fvkrZp7msDataqJ77k7Iu+YuJjL3LJt1ytb/F
+RZKeCbs7AkEAx2/YiUh86xSYAZ6tAJyZOxrSBtRJSkHyRzNyexe/hauQIskzyAqs
+h16E66cPaX+hGyYP7ezg1okiIwTBbjQCkwJAZv9GaAQUzCYX5JlDHqIcJ+a+mA5O
+LP9GAfuEaAzHzbeDMfCj+q9M8tsQ25xPORPD/TfIkRymbYRGIayOtU3F/wJARo4B
+6+dSEhRSBlitWYcNCoTdgn79gqC75oaD3Jo1LkPYlQXbJMzp5mYA3iFW6Xq2cxVP
+E1v22s7e3caj66nIswJAaaq1FIw+k6qKgvwf3OpsSipB7LuzTcMlLtvSgZYbG/xa
+9MY8jNLW7lh+rLq4USY8EsPPykB+n7JkhGwPNcMzXQ==
+-----END RSA PRIVATE KEY-----
+-----BEGIN CERTIFICATE-----
+MIIDBzCCAnCgAwIBAgIJANZYLn7mdsbCMA0GCSqGSIb3DQEBBAUAMGExCzAJBgNV
+BAYTAlhYMQswCQYDVQQIEwJYWDELMAkGA1UEBxMCWFgxCzAJBgNVBAoTAlhYMQsw
+CQYDVQQLEwJYWDELMAkGA1UEAxMCWFgxETAPBgkqhkiG9w0BCQEWAlhYMB4XDTA1
+MDIyMDExMzgzOVoXDTA1MDMyMjExMzgzOVowYTELMAkGA1UEBhMCWFgxCzAJBgNV
+BAgTAlhYMQswCQYDVQQHEwJYWDELMAkGA1UEChMCWFgxCzAJBgNVBAsTAlhYMQsw
+CQYDVQQDEwJYWDERMA8GCSqGSIb3DQEJARYCWFgwgZ8wDQYJKoZIhvcNAQEBBQAD
+gY0AMIGJAoGBALo/RAzPrZqi1dMIo/Nh6QA9HEJaFLAVdGD33PZluTF2wZLufCA3
+rf6lhpijrLc2T7ES6WkKTLbjqBC5/tJanyJbaSxIyLgP7uL4Nv1DEQVkFSlsLuwn
+biMhSPxEOJHIz4bTxihEZDOV8ZilqlnwRDr5xjLFA5EqmoXWdFU1CPjhAgMBAAGj
+gcYwgcMwHQYDVR0OBBYEFKNJfe/E4DNHBMLXlN3b/9MExoheMIGTBgNVHSMEgYsw
+gYiAFKNJfe/E4DNHBMLXlN3b/9MExoheoWWkYzBhMQswCQYDVQQGEwJYWDELMAkG
+A1UECBMCWFgxCzAJBgNVBAcTAlhYMQswCQYDVQQKEwJYWDELMAkGA1UECxMCWFgx
+CzAJBgNVBAMTAlhYMREwDwYJKoZIhvcNAQkBFgJYWIIJANZYLn7mdsbCMAwGA1Ud
+EwQFMAMBAf8wDQYJKoZIhvcNAQEEBQADgYEAPru2faPZKNmyW/3FDtzYJpZqZR3r
+Kt/8Gtyezl1cwBQUQdaJ2XZqUmxC/bfV65dCWsOzBRFWVmjd9P/Hured0bgyTxDZ
+OFWZZ9bAUWqFGmTbE3OGKY8yIvC+C6zMSMfa1LEnJLT3pru8zDMDp0B3fxeMwBfF
+521VX8czzbQ1oWA=
+-----END CERTIFICATE-----
